--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.2"
   }
