--- a/front-end/package.json
+++ b/front-end/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "tailwindcss-animated": "^2.0.0"
   }
 }
