--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "start": "npm-run-all --parallel tailwind react",
