updated back end queries

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,1 +1,3 @@
 JWT_SECRET = !x1@cr1SE@1s
+DATABSE_URL = postgresql://pi_day_v2_db_user:gCverkbyXpV5YToxZ53mTRawSE3dHaDb@dpg-cv6jocl2ng1s73fup92g-a/pi_day_v2_db
+NODE_ENV = production
