--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,17 +19,16 @@
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "npm-run-all --parallel tailwind react",
-  "tailwind": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch",
-  "react": "react-scripts start",
-  "build": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css && react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+    "start": "npm-run-all --parallel tailwind react",
+    "tailwind": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch",
+    "react": "react-scripts start",
+    "build": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -49,7 +48,11 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
+    "autoprefixer": "^10.4.20",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12",
     "tailwindcss-animated": "^2.0.0"
   }
 }
