--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,7 +25,7 @@
     "start": "npm-run-all --parallel tailwind react",
     "tailwind": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch",
     "react": "react-scripts start",
-    "build": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css && react-scripts build",
+    "build": "postcss src/styles/input.css -o src/styles/output.css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,7 +48,6 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.12",
     "autoprefixer": "^10.4.20",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.3",
