--- a/front-end/package.json
+++ b/front-end/package.json
@@ -51,6 +51,7 @@
     "autoprefixer": "^10.4.20",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^4.0.12",
     "tailwindcss-animated": "^2.0.0"
   }
