--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,7 +25,7 @@
     "start": "npm-run-all --parallel tailwind react",
     "tailwind": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch",
     "react": "react-scripts start",
-    "build": "postcss src/styles/input.css -o src/styles/output.css && react-scripts build",
+    "build": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
